# skillbridge

./: .claude  .commitlintrc.json  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  BOOTSTRAP.md  CLAUDE.md  Makefile  PRODUCT.md  README.md  agent-orchestrator.yaml.example  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  new-service.md
.github/workflows/: lint.yml  schema.yml  spec-check.yml
.husky/: commit-msg  pre-commit  pre-push
apps/web/: .env.example  AGENTS.md  DESIGN_SYSTEM.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
backend/: package-lock.json  package.json
docs/: CONVENTIONS.md  CORE_RULES.md  ONBOARDING.md
docs/adr/: 0001-monorepo-structure.md  0002-tech-stack.md  0003-solana-auth.md  0003-solana-migration.md  README.md
docs/specs/: 1-user-auth.md  10-reputation-contract.md  11-ratings-reviews.md  12-notifications.md  2-portfolio.md  3-gig-creation.md  4-smart-contract-escrow.md  5-work-submission.md  6-milestone-approval.md  69-solana-escrow-contracts.md  7-ai-code-review.md  72-solana-auth.md  8-discovery-board.md  9-dispute-resolution.md  TEMPLATE.md
infra/: docker-compose.yml
infra/aws/: README.md
scripts/: new-app.sh  new-service.sh
services/_template/: AGENTS.md  README.md
services/ai-reviewer/: .env.example  AGENTS.md  Dockerfile  README.md
services/api/: .env.example  AGENTS.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  conftest.py  pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_initial.py
services/api/src/: config.py  main.py
services/api/src/api/: __main__.py  _roles.py  auth.py  config.py  dashboard.py  dispute.py  gig.py  main.py  middleware.py  milestone.py  notification.py  portfolio.py  proposal.py  rating.py  reputation.py  schemas.py  submission.py  user.py  webhooks.py  workspace.py
services/api/src/api/api/: auth.py  health.py
services/api/src/api/domain/: auth.py  siwe.py
services/api/src/api/infra/: database.py  models.py  user_repo.py
services/api/src/domain/: auth.py  dispute.py  enums.py  gig.py  milestone_approval.py  notification.py  portfolio.py  proposal.py  rating.py  reputation.py  reputation_sync.py  review.py  submission.py
services/api/src/infra/: celery_client.py  database.py  email.py  github.py  models.py  s3.py  web3_client.py
services/api/src/middleware/: auth.py
services/api/src/migrations/: env.py
services/api/src/migrations/versions/: 0001_create_users_and_auth_nonces.py  0002_create_gigs_and_milestones.py  0003_create_portfolio_items.py  0003_create_proposals_and_notifications.py  0003_create_submissions_and_notifications.py  0004_create_submissions_and_notifications.py  0005_create_proposals_and_notifications.py  0006_create_review_reports.py  0007_add_escrow_contracts_and_milestone_paid_status.py  0008_add_tx_signature_to_escrow_contracts.py  0008_create_disputes_and_dispute_messages.py  0008_create_reviews.py  0009_add_github_url_and_cover_image_to_portfolio.py  0009_create_reputation_table.py  0010_add_contract_index_to_milestones.py  0010_create_reviews.py  0011_expand_escrow_contracts.py  0012_rename_gig_contract_address_to_escrow_pda.py  001_create_gigs_and_portfolio_items.py
services/api/tests/e2e/: conftest.py  test_auth.py  test_auth_email.py  test_auth_middleware.py  test_auth_wallet.py  test_dispute_api.py  test_gig.py  test_gig_api.py  test_milestone_approval_api.py  test_milestone_get_and_escrow_api.py  test_notification_api.py  test_portfolio.py  test_portfolio_api.py  test_proposal_api.py  test_rating_api.py  test_reputation_api.py  test_submission_api.py  test_user_profile_api.py  test_workspace_api.py
services/api/tests/unit/: conftest.py  test_dispute_domain.py  test_domain_auth.py  test_domain_siwe.py  test_gig.py  test_gig_domain.py  test_jwt.py  test_milestone_approval_domain.py  test_nonce.py  test_notification_domain.py  test_password.py  test_portfolio.py  test_portfolio_domain.py  test_proposal_domain.py  test_rating_domain.py  test_reputation_domain.py  test_siwe.py  test_solana_auth.py  test_submission_domain.py
services/contracts/programs/gig_escrow/: Cargo.toml
services/contracts/programs/gig_escrow/src/: lib.rs
(+125 files in other folders)
