[package]
name = "gig-escrow"
version = "0.1.0"
description = "SkillBridge escrow program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gig_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
